@@ -20,6 +20,8 @@ Bugs fixed
 ----------
 
 * #7461: py domain: fails with IndexError for empty tuple in type annotation
+* #7510: py domain: keyword-only arguments are documented as having a default of
+  None
 * #7418: std domain: :rst:role:`term` role could not match case-insensitively
 * #7461: autodoc: empty tuple in type annotation is not shown correctly
 * #7479: autodoc: Sphinx builds has been slower since 3.0.0 on mocking
